# relational-search

./: Cargo.toml
crates/docatlas-core/: Cargo.toml
crates/docatlas-core/src/: auth.rs  document.rs  error.rs  fields.rs  identifiers.rs  index.rs  lib.rs  mem.rs  persist.rs  schema.rs  shared.rs  transport.rs
crates/docatlas-core/src/auth/: authentication.rs  authorization.rs  lock_api.rs  users.rs
crates/docatlas-core/src/auth/authentication/: admin_service.rs
crates/docatlas-core/src/index/: segments.rs
crates/docatlas-core/src/mem/: disk_array.rs  disk_vector.rs
crates/docatlas-core/src/persist/: block.rs  persisted_box.rs  persisted_cell.rs  persisted_raw_array.rs  persisted_unsafe_cell.rs  persisted_vec.rs
crates/docatlas-core/src/transport/: packet_reader.rs
crates/docatlas-daemon/: Cargo.toml
crates/docatlas-daemon/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  main_loop.rs
crates/docatlas-daemon/src/config/: merge_strategies.rs
