[package]
name = "docatlas-daemon"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
fern = "0.6.2"
tracing = { version = "0.1.37", features = ["log"] }
log = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
clap = { version = "4.4.2", features = ["derive"] }
merge = { version = "0.1.0", features = ["derive"] }
humantime = "2.1.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
tokio-util = { version = "0.7.8", features = ["io"] }
async-stream = "0.3.5"
serde-pickle = "1.1.1"
docatlas-core = { version = "0.1.0", path = "../docatlas-core" }
